@@ -2,6 +2,7 @@
 2018-10-25  <kennethj@gagarin.uit.no>
     * export_ad.py: added missing unicode_literals import
     * import_system_accounts.py:    updated to handle unicode, also replaced function that creates unicode to use transliterate
+    * .vscode: added code debug file
 2018-10-25  <kennethj@gagarin.uit.no>
     * import_tlf.py: added sendmail import (which was removed while testing)
 2018-10-25  <kennethj@gagarin.uit.no>
